# eodhd-mcp-server

./: .env.example  .gitignore  CLAUDE.md  EODHD_MCP_Server_Design.md  README.md  README_JA.md  pyproject.toml  requirements.txt
docs/: EODHD_MCP_Server_Design.md  EODHD_MCP_Server_Design_EN.md  README.md
src/eodhd_mcp_server/: __init__.py  api_client.py  config.py  data_processor.py  exceptions.py  server.py
tests/: __init__.py  test_config.py  test_data_processor.py  test_volume_averages.py
